# hermes-memory-decay

./: .gitignore  FEEDBACK_V2_PLAN.md  README.md  after-install.md  pyproject.toml
core/: memory.py
docs/engineering-discipline/plans/: 2026-04-04-hermes-memory-decay-memory-provider-abc.md
scripts/: install.sh
skills/: DESCRIPTION.md
skills/dev/: SKILL.md
skills/forget/: SKILL.md
skills/install/: SKILL.md
skills/memory-status/: SKILL.md
skills/recall/: SKILL.md
skills/remember/: SKILL.md
skills/update/: SKILL.md
src/hermes_memory_decay/: __init__.py  config.py  config.yaml.example  http_client.py  memory_provider.py  plugin.yaml  prompt.py  schemas.py  server_manager.py  tools.py
tests/: conftest.py  test_http_client.py  test_memory.py  test_memory_provider.py  test_server_manager.py  test_tools.py
