[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memory-decay"
version = "0.1.0"
description = "Human-like memory with natural decay for Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "roach"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.entry-points."hermes_agent.plugins"]
hermes-memory-decay = "hermes_memory_decay"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
